# AegisEdge

./: .gitignore  CMakeLists.txt  README.md  data-format.json
Assets/images/: airsim_rec.txt
DetectionSystems/: horizon.hpp  ohd.cpp
aegis_edge_hud/: README.md  pubspec.yaml
aegis_edge_hud/android/app/: build.gradle.kts
aegis_edge_hud/android/app/src/main/: AndroidManifest.xml
aegis_edge_hud/android/app/src/main/kotlin/fr/avainfo/aegis_edge_hud/: MainActivity.kt
aegis_edge_hud/lib/: main.dart
aegis_edge_hud/lib/models/: drone_state.dart  horizon_data.dart  link_state.dart
aegis_edge_hud/lib/painters/: artificial_horizon_painter.dart  horizon_painter.dart  tactical_bg_painter.dart
aegis_edge_hud/lib/screens/: hud_screen.dart
aegis_edge_hud/lib/services/: demo_service.dart  hud_controller.dart  udp_service.dart
aegis_edge_hud/lib/theme/: hud_theme.dart
aegis_edge_hud/lib/widgets/: artificial_horizon_widget.dart  hud_mjpeg_background.dart  hud_video_background.dart  mini_map.dart  stale_overlay.dart  status_badge.dart  telemetry_panel.dart
aegis_edge_hud/linux/: CMakeLists.txt
aegis_edge_hud/linux/runner/: my_application.cc
aegis_edge_hud/test/: widget_test.dart
aegis_edge_hud/web/: index.html  manifest.json
airsim_bridge/: airsim_drone_patrol.py  airsim_drone_patrol_cinematic.py  airsim_mjpeg_bridge.py
chaos-proxy/: README.md  proxy.py
core/: CMakeLists.txt
core/include/: json_utils.hpp  link_state.hpp  telemetry.hpp  udp_socket.hpp
core/src/: json_utils.cpp  main.cpp  telemetry.cpp  udp_socket.cpp
drone-sim/: README.md  horizon_detection_test.cpp  live_horizon_bridge.cpp  main.cpp  mainn.cpp  sim  sim_hailo  sim_hough  sim_imu
drone-sim/logs/: airsim_telemetry_log.csv  airsim_telemetry_log.jsonl
info/: Aegis Edge.pptx  info.md  json_awaited_hf.json  json_awaited_hnf.json
test/: README.md  test0_build.sh  test1_chaos_proxy.sh  test2_core.sh  test3_airsim_bridge_512.sh  test4_debug_live_horizon_512.sh  test4_live_horizon_512.sh  test5_drone_patrol.sh  test5b_drone_patrol_cinematic.sh  test6_flutter_hud.sh  test7_airsim_bridge_640.sh  test8_live_horizon_640.sh
tools/: send_fake_telemetry.py
